--- a/src/pages/Metrics/components/MetricsSimilarCard/MetricsSimilarCard.scss
+++ b/src/pages/Metrics/components/MetricsSimilarCard/MetricsSimilarCard.scss
@@ -1,6 +1,5 @@
 .metric-similar-card {
   position: relative;
-  list-style-type: none;
   margin-bottom: 24px;
   width: 100%;
 
@@ -14,9 +13,6 @@
 
   &__subtitle {
     margin: 12px 0 8px;
-    font-weight: 500;
-    font-size: 14;
-    line-height: 1.4;
     text-align: left;
     color: $color-dark-grey;
   }
@@ -26,8 +22,6 @@
     margin-bottom: 8px;
     border-radius: 8px;
     padding: 4px 8px;
-    font-weight: 500;
-    font-size: 14px;
     line-height: 1.2;
     background-color: $color-grey-light-100;
   }
@@ -47,7 +41,7 @@
     object-fit: cover;
   }
 
-  &__box-colors {
+  &__colors {
     position: absolute;
     right: 16px;
     bottom: 16px;
