--- a/src/pages/Metrics/components/MetricsSimilarList/MetricsSimilarList.scss
+++ b/src/pages/Metrics/components/MetricsSimilarList/MetricsSimilarList.scss
@@ -1,18 +1,12 @@
 .metrics-similar-photos {
-  position: relative;
-
   &__title {
     margin-bottom: 16px;
-    font-weight: 500;
     font-size: 18px;
-    line-height: 1.4;
     text-align: left;
   }
 
   &__empty {
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.4;
     text-align: center;
     color: #7f7d85;
   }
@@ -22,9 +16,14 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    margin-bottom: 32px;
     width: 100%;
     height: 100%;
     min-width: 224px;
+
+    @include desktop {
+      margin-bottom: 0;
+    }
   }
 
   &__empty-loader-svg {
@@ -37,11 +36,16 @@
     flex-direction: column;
     padding-left: 0;
     width: 100%;
-    height: calc(100vh - 224px);
+    height: 100%;
     min-width: 224px;
+
+    @include tablet {
+      max-width: 224px;
+    }
 
     @include desktop {
       overflow-y: scroll;
+      height: calc(100vh - 224px);
 
       &::-webkit-scrollbar {
         display: none;
