--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -5,11 +5,13 @@
 }
 
 :root {
+  list-style-type: none;
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.4;
   color: $color-black;
+  appearance: none;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-synthesis: none;
@@ -23,8 +25,17 @@
   text-align: center;
 }
 
+img {
+  display: block;
+}
+
 body {
   margin: 0;
+}
+
+ul,
+li {
+  list-style-type: inherit;
 }
 
 h1,
@@ -34,6 +45,8 @@ h4,
 p {
   margin: 0;
   padding: 0;
+  font-weight: inherit;
+  font-size: inherit;
 }
 
 .visually-hidden {
