--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,4 +20,5 @@
 @import "../components/CircleProgressBar/CircleProgressBar.scss";
 @import "../pages/Metrics/components/MetricsSimilarCard/MetricsSimilarCard.scss";
 @import "../pages/Metrics/components/MetricsSimilarList/MetricsSimilarList.scss";
+@import "../pages/Metrics/components/MetricsInfo/MetricsInfo.scss";
 @import "../components/Loader/Loader.scss";
